This file shows a history of changes between PrBoom versions since v2.1.0.
For historical reference, the complete LxDoom changelog follows it.

Changes from v2.4.0 to v2.4.1
- when both -nodraw and -nosound are supplied, then no graphics will be
  initialized and no windows opened
- removed obsolete video related code
- fix screenshots on 64bit systems

Changes from v2.2.6 to v2.4.0
- emulate reject overflows and spechit overflows - from prboom-plus
- more original doom compatibility options
- improve stretched graphics drawing for hires
- fix super-shotgun reload on last shot
- fix compilation with gcc 4.x
- fix some more dehacked support problems (e.g. Hacx)
- fix crash if pwad contains zero-length sound lumps
- added possibility to use mmap for wad access, this leads to less memory usage
- simplified the memory handling
- removed old Doom v1.2 lumps from prboom.wad
- windows also uses prboom.wad now
- add Mac OS X bundle build
- removed lumps and tables which are in prboom.wad from source

Changes from v2.2.5 to v2.2.6
- fix Inferno intermission screen crash
- fix lockup for other netgame clients when one client quits
- fix memory leak in netgame server
- fix SDL_LockScreen crashes on Win32
- fix fuzz drawing for hi-res
- network games should survive temporary loss of connection
- fix dehacked NOSECTOR/NOBLOCKMAP effects
- fix player spawn sound

Changes from v2.2.4 to v2.2.5
- fix crash caused by long messages in HUD
- live monster counter on HUD
- notify server if client quits during startup wait
- improved response file parser
- fast forward to given map # in demo playback
- fixes for various sound bugs
- fix doom2 demos at levels with >10 deathmatch starts
- and more compatibility and demo fixes
- support higher-turning-resolution demos from v1.91
- fix compilation with gcc 3.4.x

Changes from v2.2.3 to v2.2.4
- fixed sky-over-sky HOM
- add sound compatibility option
- improve sound volume accuracy
- shared texture palette isn't the default anymore